--- a/neo4j-datasource-plugin/.github/workflows/release.yml
+++ b/neo4j-datasource-plugin/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Release
 on:
   push:
     tags:
-      - "v*.*.*" # Run workflow on version tags, e.g. v1.0.0.
+      - "v1.0.0" # Run workflow on version tags, e.g. v1.0.0.
 
 jobs:
   release:
