Added dev dependency grafana/runtime

--- a/neo4j-datasource-plugin/package.json
+++ b/neo4j-datasource-plugin/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@grafana/data": "latest",
     "@grafana/toolkit": "latest",
+    "@grafana/runtime": "latest",
     "@grafana/ui": "latest",
     "@types/lodash": "latest",
     "@testing-library/jest-dom": "5.4.0",
