--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,11 @@ jobs:
         uses: actions/setup-node@v2.1.2
         with:
           node-version: "14.x"
+
+      - name: Setup Go environment
+        uses: actions/setup-go@v2
+        with:
+          go-version: "1.15"
           
       - name: Install dependencies
         run: yarn install --frozen-lockfile
