--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,7 @@ jobs:
         run: yarn build
 
       - name: Sign plugin
-        run: yarn sign --rootUrls http://localhost:3000
+        run: yarn sign --rootUrls http://localhost:3000 # Remove --rootUrls if pluginType is Community
         env:
           GRAFANA_API_KEY: ${{ secrets.GRAFANA_API_KEY }} # Requires a Grafana API key from Grafana.com.
 
@@ -71,13 +71,13 @@ jobs:
           md5sum ${{ steps.metadata.outputs.archive }} > ${{ steps.metadata.outputs.archive-checksum }}
           echo "::set-output name=checksum::$(cat ./${{ steps.metadata.outputs.archive-checksum }} | cut -d' ' -f1)"
 
-      - name: Lint plugin
-        run: |
-          git clone https://github.com/grafana/plugin-validator
-          pushd ./plugin-validator/pkg/cmd/plugincheck
-          go install
-          popd
-          plugincheck ${{ steps.metadata.outputs.archive }}
+#      - name: Lint plugin
+#        run: |
+#          git clone https://github.com/grafana/plugin-validator
+#          pushd ./plugin-validator/pkg/cmd/plugincheck
+#          go install
+#          popd
+#          plugincheck ${{ steps.metadata.outputs.archive }}
 
       - name: Create release
         id: create_release
