Added image and rename pluginId to convention

--- a/neo4j-datasource-plugin/package.json
+++ b/neo4j-datasource-plugin/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "neo4j-datasource",
+  "name": "denniskniep-neo4j-datasource",
   "version": "1.0.0",
   "description": "Neo4J Datasource",
   "scripts": {
