--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,12 @@
 version: "3.8"
 services:
   grafana:
-    image: grafana/grafana:8.0.5
+    image: grafana/grafana:8.1.3
     environment:
       - GF_DEFAULT_APP_MODE=development   
       - GF_SECURITY_ADMIN_USER=admin
       - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_ALLOW_LOADING_UNSIGNED_PLUGINS=denniskniep-neo4j-datasource
     volumes:
       - ./neo4j-datasource-plugin/dist:/var/lib/grafana/plugins/neo4j-datasource-plugin
       - ./grafana/provisioning/:/etc/grafana/provisioning/
