--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -1,12 +1,13 @@
 version: "3.8"
 services:
   grafana:
-    image: grafana/grafana:8.1.3
+    image: grafana/grafana:8.2.5
     environment:
       - GF_DEFAULT_APP_MODE=development   
       - GF_SECURITY_ADMIN_USER=admin
       - GF_SECURITY_ADMIN_PASSWORD=admin
       - GF_ALLOW_LOADING_UNSIGNED_PLUGINS=kniepdennis-neo4j-datasource
+      - GF_PLUGINS_ALLOW_LOADING_UNSIGNED_PLUGINS=kniepdennis-neo4j-datasource
     volumes:
       - ./neo4j-datasource-plugin/dist:/var/lib/grafana/plugins/neo4j-datasource-plugin
       - ./grafana/provisioning/:/etc/grafana/provisioning/
