--- a/neo4j-datasource-plugin/package.json
+++ b/neo4j-datasource-plugin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kniepdennis-neo4j-datasource",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "Neo4J Datasource",
   "scripts": {
     "build": "grafana-toolkit plugin:build",
@@ -20,6 +20,9 @@
     "@types/lodash": "latest",
     "@testing-library/jest-dom": "5.4.0",
     "@testing-library/react": "^10.0.2"
+  },
+  "resolutions": {
+    "rxjs": "7.3.0"
   },
   "engines": {
     "node": ">=14"
