--- a/neo4j-datasource-plugin/package.json
+++ b/neo4j-datasource-plugin/package.json
@@ -13,11 +13,10 @@
   "author": "Dennis Kniep",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@grafana/data": "latest",
-    "@grafana/toolkit": "latest",
-    "@grafana/runtime": "latest",
-    "@grafana/ui": "latest",
-    "@types/lodash": "latest",
+    "@grafana/data": "8.3.4",
+    "@grafana/runtime": "8.3.4",
+    "@grafana/toolkit": "8.3.4",
+    "@grafana/ui": "8.3.4",
     "@testing-library/jest-dom": "5.4.0",
     "@testing-library/react": "^10.0.2"
   },
@@ -28,6 +27,5 @@
     "node": ">=14"
   },
   "dependencies": {
-    "neo4j-driver": "^4.3.1"
   }
 }
