--- a/neo4j-datasource-plugin/package.json
+++ b/neo4j-datasource-plugin/package.json
@@ -18,7 +18,8 @@
     "@grafana/toolkit": "8.3.4",
     "@grafana/ui": "8.3.4",
     "@testing-library/jest-dom": "5.4.0",
-    "@testing-library/react": "^10.0.2"
+    "@testing-library/react": "^10.0.2",
+    "prettier": "2.5.1"
   },
   "resolutions": {
     "rxjs": "7.3.0"
@@ -26,6 +27,5 @@
   "engines": {
     "node": ">=14"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
