--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -107,7 +107,7 @@ jobs:
           pushd ./plugin-validator/pkg/cmd/plugincheck
           go install
           popd
-          plugincheck ../${{ steps.metadata.outputs.archive }}
+          plugincheck -private ../${{ steps.metadata.outputs.archive }}
 
       - name: Create release
         id: create_release
