--- a/neo4j-datasource-plugin/package.json
+++ b/neo4j-datasource-plugin/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kniepdennis-neo4j-datasource",
   "version": "1.1.0-beta",
-  "description": "Neo4J Datasource",
+  "description": "Neo4j Datasource",
   "scripts": {
     "build": "grafana-toolkit plugin:build",
     "test": "grafana-toolkit plugin:test",
