Caching Neo4j driver in the backend;Added Screenshots

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,7 +61,7 @@ jobs:
           workdir: ./neo4j-datasource-plugin
 
       - name: Sign plugin
-        run: yarn sign --rootUrls http://localhost:3000 # Remove --rootUrls if pluginType is Community
+        run: yarn sign
         env:
           GRAFANA_API_KEY: ${{ secrets.GRAFANA_API_KEY }} # Requires a Grafana API key from Grafana.com.
 
