--- a/neo4j-datasource-plugin/package.json
+++ b/neo4j-datasource-plugin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kniepdennis-neo4j-datasource",
-  "version": "1.1.0-beta",
+  "version": "1.1.0",
   "description": "Neo4j Datasource",
   "scripts": {
     "build": "grafana-toolkit plugin:build",
