--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Setup Go environment
         uses: actions/setup-go@v2
         with:
-          go-version: "1.16"
+          go-version: "1.19"
 
       - name: Start Neo4j with docker-compose
         run: docker-compose -f ../docker-compose.dev.yaml up -d neo4j neo4j-provisioning
@@ -42,6 +42,9 @@ jobs:
 
       - name: Show docker container
         run: docker ps
+
+      - name: Go Flags
+        run: export GOFLAGS=-buildvcs=false
 
       - name: Test backend
         uses: magefile/mage-action@v1
