--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -110,7 +110,7 @@ jobs:
           pushd ./plugin-validator/pkg/cmd/plugincheck2
           go install
           popd
-          plugincheck2 ${{ steps.metadata.outputs.archive }}
+          plugincheck2 ../${{ steps.metadata.outputs.archive }}
 
 
       - name: Create release
