--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -1,12 +1,18 @@
 version: "3.8"
 services:
   grafana:
-    image: grafana/grafana:9.5.3
-    environment:
-      - GF_DEFAULT_APP_MODE=development   
-      - GF_SECURITY_ADMIN_USER=admin
-      - GF_SECURITY_ADMIN_PASSWORD=admin
-      - GF_FEATURE_TOGGLES_ENABLE=ngalert
+    build: 
+      context: .
+      dockerfile: Dockerfile.dev
+    environment:             
+      # Make it as simple as possible to access the grafana instance for development purposes
+      # Do NOT enable these settings in a public facing / production grafana instance
+      - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
+      - GF_AUTH_ANONYMOUS_ENABLED=true
+      - GF_AUTH_BASIC_ENABLED=false
+      # Set development mode so plugins can be loaded without the need to sign
+      - GF_DEFAULT_APP_MODE=development
+      # Allow explicitly unsinged plugin loading
       - GF_ALLOW_LOADING_UNSIGNED_PLUGINS=kniepdennis-neo4j-datasource
       - GF_PLUGINS_ALLOW_LOADING_UNSIGNED_PLUGINS=kniepdennis-neo4j-datasource
     volumes:
