--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,23 +14,42 @@ jobs:
       run:
         working-directory: ./neo4j-datasource-plugin
     steps:
-      - uses: actions/checkout@v2
-
+      - uses: actions/checkout@v3
+      
       - name: Setup Node.js environment
-        uses: actions/setup-node@v2.1.2
+        uses: actions/setup-node@v3
         with:
-          node-version: "14.x"
+          node-version: '16'
+          cache: 'npm'
     
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: npm ci
 
-      - name: Build and test frontend
-        run: yarn build
+      - name: Check types
+        run: npm run typecheck
 
-      - name: Setup Go environment
-        uses: actions/setup-go@v2
+      - name: Lint
+        run: npm run lint
+
+      - name: Unit tests
+        run: npm run test:ci
+
+      - name: Build frontend
+        run: npm run build
+
+      - name: Setup Go environment        
+        uses: actions/setup-go@v3
         with:
-          go-version: "1.19"
+          go-version: '1.20'
+
+      - name: Go Flags
+        run: export GOFLAGS=-buildvcs=false
+
+      - name: Build backend
+        uses: magefile/mage-action@v2
+        with:
+          version: latest
+          args: buildAll
 
       - name: Start Neo4J with docker-compose
         run: docker-compose -f ../docker-compose.dev.yaml up -d neo4j neo4j-provisioning
@@ -45,22 +64,22 @@ jobs:
       - name: Show docker container
         run: docker ps
 
-      - name: Go Flags
-        run: export GOFLAGS=-buildvcs=false
-
       - name: Test backend
-        uses: magefile/mage-action@v1
+        uses: magefile/mage-action@v2
         with:
           version: latest
           args: coverage
-          workdir: ./neo4j-datasource-plugin
+
+      - name: Run e2e tests
+        run: npm run e2e
+
+      - name: Archive E2E output
+        uses: actions/upload-artifact@v3
+        if: steps.run-e2e-tests.outcome != 'success'
+        with:
+          name: cypress-videos
+          path: cypress/videos
+          retention-days: 5
 
       - name: Stop Neo4J with docker-compose
         run: docker-compose -f ../docker-compose.dev.yaml down -v
-
-      - name: Build backend
-        uses: magefile/mage-action@v1
-        with:
-          version: latest
-          args: buildAll
-          workdir: ./neo4j-datasource-plugin
