--- a/.github/workflows/is-compatible.yml
+++ b/.github/workflows/is-compatible.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           node-version: '16'
           cache: 'npm'
-          cache-dependency-path: ./neo4j-datasource-plugin/package-lock.json`
+          cache-dependency-path: "./neo4j-datasource-plugin/package-lock.json"
 
       - name: Install dependencies
         run: npm ci
