--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,17 +70,17 @@ jobs:
           args: coverage
           workdir: ./neo4j-datasource-plugin
 
-      - name: Run e2e tests
-        run: npm run e2e
+#      - name: Run e2e tests
+#        run: npm run e2e
 
-      - name: Archive E2E output
-        uses: actions/upload-artifact@v3
-        if: steps.run-e2e-tests.outcome != 'success'
-        with:
-          name: cypress-videos
-          path: cypress/videos
-          retention-days: 5
-          workdir: ./neo4j-datasource-plugin
+#      - name: Archive E2E output
+#        uses: actions/upload-artifact@v3
+#        if: steps.run-e2e-tests.outcome != 'success'
+#        with:
+#          name: cypress-videos
+#          path: cypress/videos
+#          retention-days: 5
+#          workdir: ./neo4j-datasource-plugin
 
       - name: Stop Neo4J with docker-compose
         run: docker-compose -f ../docker-compose.dev.yaml down -v
