--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -147,6 +147,7 @@ jobs:
         with:
           draft: true
           generate_release_notes: true
+          workdir: ./neo4j-datasource-plugin
           files: |
             ../${{ steps.metadata.outputs.archive }}
             ../${{ steps.metadata.outputs.archive-checksum }}
